high resolution ADL5387 diagram

--- a/abcstat/makefile
+++ b/abcstat/makefile
@@ -96,7 +96,7 @@ mainx.pdf: mainx.xdv
   @echo start generating $(TARGET).pdf
   $(PRG_XDV2PDF) $(OPT_XDV2PDF) -o mainx.pdf mainx.xdv
 
-mainx.xdv: mainx.tex $(FILE_SRC) $(FILE_STY) $(FILE_BIB) makefile
+mainx.xdv: mainx.tex $(FILE_SRC) $(FILE_STY) $(FILE_BIB)
    echo "\indexentry{{dummy index entry}}{1}" > mainx.idx # erase and/or initalize index file
    echo "\indexentry{{dummy index entry}}{1}" > xref.idx  # erase and/or initalize index file
    echo "\indexentry{{dummy index entry}}{1}" > xsym.idx  # erase and/or initalize index file
@@ -136,5 +136,5 @@ pdf:
   make
 
 print:
-  xdvipdfmx  -s 165-166 -p a4 -q -o sunspots.pdf mainx
+  xdvipdfmx  -s 107,456 -p a4 -q -o popper.pdf mainx
 
