--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -115,6 +115,7 @@ FILE_GRP  =              \
   triangleabc.pdf       \
   triangleabcft.pdf     \
   unitcircle.pdf        \
+  unitcircle_RecipricolConjugate.pdf \
   unitcircle_roots1.pdf \
   unitcircle_roots2.pdf \
   unitcircle_roots3.pdf \
