--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -167,6 +167,7 @@ GRP_DATA =                     \
   sunspots.pdf                 \
   sunspots_acf.pdf             \
   sunspots_coefs_acf.pdf       \
+  sunspots_dft_basis.pdf       \
   sunspots_dft_coefs_Real.pdf  \
   sunspots_dft_coefs_Imag.pdf  \
   sunspots_eigen.pdf           \
