--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -927,6 +927,9 @@ FILE_WAV =                              \
 	h_1_3_2_phi_h.pdf                   \
   h_1_3_2_psi_g.pdf                   \
 	h_1_3_2_pz.pdf                      \
+	h_1_1_1o128_pz.pdf                  \
+	h_1_1_1o128_phi_h.pdf               \
+	h_1_1_1o128_psi_g.pdf               \
 	S4_pz.pdf                           \
 	S5_pz.pdf                           \
 	S6_pz.pdf                           \
