--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -930,6 +930,9 @@ FILE_WAV =                              \
 	h_1_1_1o128_pz.pdf                  \
 	h_1_1_1o128_phi_h.pdf               \
 	h_1_1_1o128_psi_g.pdf               \
+	h_1_129_128_pz.pdf                  \
+	h_1_129_128_phi_h.pdf               \
+	h_1_129_128_psi_g.pdf               \
 	S4_pz.pdf                           \
 	S5_pz.pdf                           \
 	S6_pz.pdf                           \
