--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -939,6 +939,9 @@ FILE_WAV =                              \
 	h_1_1_1_1_pz.pdf                    \
 	h_1_1_1_1_phi_h.pdf                 \
 	h_1_1_1_1_psi_g.pdf                 \
+	h_1_0_0_1_pz.pdf                    \
+	h_1_0_0_1_phi_h.pdf                 \
+	h_1_0_0_1_psi_g.pdf                 \
 	S4_pz.pdf                           \
 	S5_pz.pdf                           \
 	S6_pz.pdf                           \
